[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
name = "genstringsession"
version = "0.1.0"
description = "Script for generating Telegram Session in telethon or pyrogram"
authors = ["SurajRaj4542 <surajraj12444@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Telethon = "^1.14.0"
TgCrypto = "^1.2.1"
Pyrogram = "^0.17.1"

[tool.poetry.dev-dependencies]


